--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1336,13 +1336,15 @@
 
   /* #####################   SECTION OCHO ############################# */
   .conte_pilares {
-
-    .contenedor_de_animaciones{
+    .contenedor_de_animaciones {
       width: 100vw;
       height: 100vh;
       border: 1px solid red;
+      display: flex;
+      justify-content: center;
+      align-items: start;
 
-      .cont_animacion{
+      .cont_animacion {
         width: 100vw;
         height: 100vh;
         position: relative;
@@ -1352,18 +1354,20 @@
         align-content: center;
         overflow: hidden;
 
-        .cont_animacion_uno{
+        .cont_animacion_uno {
+          opacity: 0%;
           top: -15vh;
           position: absolute;
-          z-index: 0;
+          z-index: -3;
         }
-        .cont_animacion_dos{
+        .cont_animacion_dos {
+          opacity: 0%;
           top: -45vh;
           position: absolute;
           z-index: -1;
-
         }
-        .cont_animacion_tres{
+        .cont_animacion_tres {
+          opacity: 0%;
           display: flex;
           justify-content: center;
           align-content: center;
@@ -1371,12 +1375,99 @@
           height: 110vh;
           top: 0vh;
           position: absolute;
-          z-index: -2;
+          z-index: -1;
+        }
+
+        
+      .fondo_negro {
+        z-index: -4;
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        background: #141414;
+        border-radius: 100%;
+      }
+      .fondo_blanco {
+        z-index: -2;
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        background: #ffffff;
+        border-radius: 100%;
+      }
+      }
+
+      .cont_texto {
+        position:absolute;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content:space-between;
+        .contenedor_texto {
+          width: 100%;
+          border: 1px solid green;
+          display: flex;
+          flex-direction: column;
+          overflow: hidden;
+          .contador {
+            transform: translateY(100%);
+            border: 1px solid rgb(251, 255, 0);
+            text-align: end;
+            color: #fff;
+            font-family: Margo + Beuys;
+            font-size: 50px;
+            font-style: normal;
+            font-weight: 900;
+            line-height: 136%; /* 68px */
+            text-transform: uppercase;
+          }
+        }
+        .contenedor_texto {
+          width: 100%;
+          border: 1px solid green;
+          display: flex;
+          flex-direction: column;
+          overflow: hidden;
+          .titulo {
+            transform: translateY(100%);
+            border: 1px solid rgb(251, 255, 0);
+            text-align: center;
+            color: #fff;
+            text-shadow: 0px 0px 38px #000;
+            font-family: Margo + Beuys;
+            font-size: 90px;
+            font-style: normal;
+            font-weight: 900;
+            line-height: 138.5%; /* 124.65px */
+            letter-spacing: 4.5px;
+            text-transform: capitalize;
+          }
+        }
+        .contenedor_texto {
+          width: 100%;
+          border: 1px solid green;
+          display: flex;
+          flex-direction: column;
+          overflow: hidden;
+          .contenido {
+            transform: translateY(100%);
+            width: 40%;
+            border: 1px solid rgb(251, 255, 0);
+            text-align: start;
+            color: #fff;
+            font-family: Gotham;
+            font-size: 15px;
+            font-style: normal;
+            font-weight: 300;
+            line-height: 138.5%; /* 20.775px */
+            letter-spacing: 0.75px;
+            text-transform: capitalize;
+          }
         }
       }
 
     }
-
   }
 
   /* #####################   *************   ############################# */
@@ -4696,93 +4787,92 @@
       }
     }
 
-
     .cont_reel_diagonal {
-    width: 100vw;
-    height: 100vh;
-    background: #171717;
-    display: none;
-    overflow: hidden;
-    .cont_fixed_reel {
-      width: 80%;
-      margin: 2em 1em 2em 1em;
-      display: flex;
-      flex-direction: column;
-      z-index: 5;
-      justify-content: space-between;
+      width: 100vw;
+      height: 100vh;
+      background: #171717;
+      display: none;
+      overflow: hidden;
+      .cont_fixed_reel {
+        width: 80%;
+        margin: 2em 1em 2em 1em;
+        display: flex;
+        flex-direction: column;
+        z-index: 5;
+        justify-content: space-between;
 
-      .titulo_reel {
-        color: #fff;
-        font-family: Margo + Beuys;
-        font-size: 30px;
-        font-style: normal;
-        font-weight: 900;
-        line-height: 136%; /* 68px */
-        text-transform: uppercase;
+        .titulo_reel {
+          color: #fff;
+          font-family: Margo + Beuys;
+          font-size: 30px;
+          font-style: normal;
+          font-weight: 900;
+          line-height: 136%; /* 68px */
+          text-transform: uppercase;
+        }
+        .contenido_reel {
+          color: #ffffff;
+          font-family: Gotham;
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 300;
+          line-height: 138.5%; /* 20.775px */
+          letter-spacing: 0.75px;
+          text-transform: capitalize;
+        }
       }
-      .contenido_reel {
-        color: #ffffff;
-        font-family: Gotham;
-        font-size: 15px;
-        font-style: normal;
-        font-weight: 300;
-        line-height: 138.5%; /* 20.775px */
-        letter-spacing: 0.75px;
-        text-transform: capitalize;
+      .cont_reels {
+        position: absolute;
+        display: flex;
+        flex-direction: row;
+        z-index: 0;
+        height: 100%;
+        width: 100%;
+        transform: rotate(5deg);
+        gap: 0.5em;
+        align-items: center;
+        justify-content: center;
+        .reel_uno {
+          margin-left: 100vw;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 70%;
+          height: 70%;
+          transform: skew(15deg);
+          background: rgb(251, 255, 0);
+          img {
+            height: 50%;
+          }
+        }
+
+        .reel_dos {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 70%;
+          height: 70%;
+          transform: skew(15deg);
+          background: rgb(251, 255, 0);
+          .animacion_aboutme {
+            height: 100%;
+          }
+        }
+
+        .reel_tres {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 70%;
+          height: 70%;
+          transform: skew(15deg);
+          background: rgb(251, 255, 0);
+          img {
+            height: 50%;
+          }
+        }
       }
     }
-    .cont_reels {
-      position: absolute;
-      display: flex;
-      flex-direction: row;
-      z-index: 0;
-      height: 100%;
-      width: 100%;
-      transform: rotate(5deg);
-      gap: 0.5em;
-      align-items: center;
-      justify-content: center;
-      .reel_uno {
-        margin-left: 100vw;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 70%;
-        height: 70%;
-        transform: skew(15deg);
-        background: rgb(251, 255, 0);
-        img {
-          height: 50%;
-        }
-      }
-
-      .reel_dos {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 70%;
-        height: 70%;
-        transform: skew(15deg);
-        background: rgb(251, 255, 0);
-        .animacion_aboutme {
-          height: 100%;
-        }
-      }
-
-      .reel_tres {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 70%;
-        height: 70%;
-        transform: skew(15deg);
-        background: rgb(251, 255, 0);
-        img {
-          height: 50%;
-        }
-      }
-    }
-  }
   }
 }
 
