--- a/style/sass.css
+++ b/style/sass.css
@@ -3302,6 +3302,9 @@ p {
   width: 100vw;
   height: 100vh;
   border: 1px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: start;
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion {
   width: 100vw;
@@ -3314,16 +3317,19 @@ p {
   overflow: hidden;
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .cont_animacion_uno {
+  opacity: 0%;
   top: -15vh;
   position: absolute;
-  z-index: 0;
+  z-index: -3;
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .cont_animacion_dos {
+  opacity: 0%;
   top: -45vh;
   position: absolute;
   z-index: -1;
 }
 .body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .cont_animacion_tres {
+  opacity: 0%;
   display: flex;
   justify-content: center;
   align-content: center;
@@ -3331,7 +3337,92 @@ p {
   height: 110vh;
   top: 0vh;
   position: absolute;
+  z-index: -1;
+}
+.body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .fondo_negro {
+  z-index: -4;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  background: #141414;
+  border-radius: 100%;
+}
+.body__index .conte_pilares .contenedor_de_animaciones .cont_animacion .fondo_blanco {
   z-index: -2;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  background: #ffffff;
+  border-radius: 100%;
+}
+.body__index .conte_pilares .contenedor_de_animaciones .cont_texto {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto {
+  width: 100%;
+  border: 1px solid green;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+.body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto .contador {
+  transform: translateY(100%);
+  border: 1px solid rgb(251, 255, 0);
+  text-align: end;
+  color: #fff;
+  font-family: MargoBeuys;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 136%; /* 68px */
+  text-transform: uppercase;
+}
+.body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto {
+  width: 100%;
+  border: 1px solid green;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+.body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto .titulo {
+  transform: translateY(100%);
+  border: 1px solid rgb(251, 255, 0);
+  text-align: center;
+  color: #fff;
+  text-shadow: 0px 0px 38px #000;
+  font-family: MargoBeuys;
+  font-size: 90px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 138.5%; /* 124.65px */
+  letter-spacing: 4.5px;
+  text-transform: capitalize;
+}
+.body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto {
+  width: 100%;
+  border: 1px solid green;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+.body__index .conte_pilares .contenedor_de_animaciones .cont_texto .contenedor_texto .contenido {
+  transform: translateY(100%);
+  width: 40%;
+  border: 1px solid rgb(251, 255, 0);
+  text-align: start;
+  color: #fff;
+  font-family: Gotham;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 138.5%; /* 20.775px */
+  letter-spacing: 0.75px;
+  text-transform: capitalize;
 }
 .body__index .cont_reel_diagonal {
   width: 100vw;
