--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1336,6 +1336,7 @@
 
   /* #####################   SECTION OCHO ############################# */
   .conte_pilares {
+
     .contenedor_de_animaciones {
       width: 100vw;
       height: 100vh;
@@ -1343,6 +1344,7 @@
       display: flex;
       justify-content: center;
       align-items: start;
+
 
       .cont_animacion {
         width: 100vw;
@@ -1371,33 +1373,43 @@
           display: flex;
           justify-content: center;
           align-content: center;
-          width: 110vw;
-          height: 110vh;
+          width: 100vw;
+          height: 100vh;
           top: 0vh;
           position: absolute;
-          z-index: -1;
+          z-index: 0;
         }
-
-        
-      .fondo_negro {
+        .fondo_negro {
+          top: 50vh;
         z-index: -4;
         position: absolute;
         width: 1px;
         height: 1px;
-        background: #141414;
+        background: #171717;
         border-radius: 100%;
-      }
-      .fondo_blanco {
+        }
+        .fondo_blanco {
+          top: 50vh;
         z-index: -2;
         position: absolute;
         width: 1px;
         height: 1px;
         background: #ffffff;
         border-radius: 100%;
-      }
+        }
+        .fondo_negro_dos {
+          top: 50vh;
+          z-index: -1;
+          position: absolute;
+          width: 1px;
+          height: 1px;
+          background: #171717;
+          border-radius: 100%;
+          }
       }
 
       .cont_texto {
+        padding: 2em 5em 2em 5em;
         position:absolute;
         width: 100%;
         height: 100vh;
@@ -1434,7 +1446,6 @@
             border: 1px solid rgb(251, 255, 0);
             text-align: center;
             color: #fff;
-            text-shadow: 0px 0px 38px #000;
             font-family: Margo + Beuys;
             font-size: 90px;
             font-style: normal;
@@ -1456,6 +1467,146 @@
             border: 1px solid rgb(251, 255, 0);
             text-align: start;
             color: #fff;
+            font-family: Gotham;
+            font-size: 15px;
+            font-style: normal;
+            font-weight: 300;
+            line-height: 138.5%; /* 20.775px */
+            letter-spacing: 0.75px;
+            text-transform: capitalize;
+          }
+        }
+      }
+
+      .cont_texto_dos {
+        padding: 2em 5em 2em 5em;
+        position:absolute;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content:space-between;
+        .contenedor_texto {
+          width: 100%;
+          border: 1px solid green;
+          display: flex;
+          flex-direction: column;
+          overflow: hidden;
+          .contador {
+            transform: translateY(100%);
+            border: 1px solid rgb(251, 255, 0);
+            text-align: end;
+            color: #111111;
+            font-family: Margo + Beuys;
+            font-size: 50px;
+            font-style: normal;
+            font-weight: 900;
+            line-height: 136%; /* 68px */
+            text-transform: uppercase;
+          }
+        }
+        .contenedor_texto {
+          width: 100%;
+          border: 1px solid green;
+          display: flex;
+          flex-direction: column;
+          overflow: hidden;
+          .titulo {
+            transform: translateY(100%);
+            border: 1px solid rgb(251, 255, 0);
+            text-align: center;
+            color: #111111;
+            font-family: Margo + Beuys;
+            font-size: 90px;
+            font-style: normal;
+            font-weight: 900;
+            line-height: 138.5%; /* 124.65px */
+            letter-spacing: 4.5px;
+            text-transform: capitalize;
+          }
+        }
+        .contenedor_texto {
+          width: 100%;
+          border: 1px solid green;
+          display: flex;
+          flex-direction: column;
+          overflow: hidden;
+          .contenido {
+            transform: translateY(100%);
+            width: 40%;
+            border: 1px solid rgb(251, 255, 0);
+            text-align: start;
+            color: #111111;
+            font-family: Gotham;
+            font-size: 15px;
+            font-style: normal;
+            font-weight: 300;
+            line-height: 138.5%; /* 20.775px */
+            letter-spacing: 0.75px;
+            text-transform: capitalize;
+          }
+        }
+      }
+
+      .cont_texto_tres {
+        padding: 2em 5em 2em 5em;
+        position:absolute;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content:space-between;
+        .contenedor_texto {
+          width: 100%;
+          border: 1px solid green;
+          display: flex;
+          flex-direction: column;
+          overflow: hidden;
+          .contador {
+            transform: translateY(100%);
+            border: 1px solid rgb(251, 255, 0);
+            text-align: end;
+            color: #ffffff;
+            font-family: Margo + Beuys;
+            font-size: 50px;
+            font-style: normal;
+            font-weight: 900;
+            line-height: 136%; /* 68px */
+            text-transform: uppercase;
+          }
+        }
+        .contenedor_texto {
+          width: 100%;
+          border: 1px solid green;
+          display: flex;
+          flex-direction: column;
+          overflow: hidden;
+          .titulo {
+            transform: translateY(100%);
+            border: 1px solid rgb(251, 255, 0);
+            text-align: center;
+            color: #ffffff;
+            font-family: Margo + Beuys;
+            font-size: 90px;
+            font-style: normal;
+            font-weight: 900;
+            line-height: 138.5%; /* 124.65px */
+            letter-spacing: 4.5px;
+            text-transform: capitalize;
+          }
+        }
+        .contenedor_texto {
+          width: 100%;
+          border: 1px solid green;
+          display: flex;
+          flex-direction: column;
+          overflow: hidden;
+          .contenido {
+            transform: translateY(100%);
+            width: 40%;
+            border: 1px solid rgb(251, 255, 0);
+            text-align: start;
+            color: #ffffff;
             font-family: Gotham;
             font-size: 15px;
             font-style: normal;
